<resources>
    <string name="app_name">FaceTrace</string>
    <string name="open_gallery">Open gallery</string>
    <string name="cancel">Cancel</string>
    <string name="image">Image</string>
    <string name="upload_image">Upload image</string>
    <string name="recent">Recent</string>
    <string name="allow">Allow</string>
    <string name="permission_title_camera">Allow access to the camera</string>
    <string name="permission_msg_camera">To take photos FaceTrace needs permission to the camera</string>
    <string name="permission_title_gallery">Allow access to the gallery</string>
    <string name="permission_msg_gallery">FaceTrace needs your permission to share your photos</string>
    <string name="search">Search</string>
    <string name="smth_went_wrong">Something went wrong</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
</resources>